  in lib/misc/validation
* Bug fix: validation_matches_regex test was wrong, should be -n
  not -r in lib/misc/validation
* Bug fix: Added inclusion checks to prevent multiple inclusions
* Bug fix: Changed lib/misc/* to catch data returned by
  validate_is_*
* Removed unnecessary calls to file_check_or_generate_cache in
  lib/misc/checks/*
* Updated symlinks for different types of scan

-- Tim Brown <timb@nth-dimension.org.uk>

2012-10-21 unix-privesc-check trunk

* Bug fix: Changed $VERSION to ${VERSION} etc in upc.sh
* Removed old TODOs from lib/checks/set[ug]id
* Bug fix: Removed symlink exclusion in lib/misc/file cache
  generation

-- Tim Brown <timb@nth-dimension.org.uk>

2012-10-19 unix-privesc-check trunk

* Re-engineered check lib/checks/binary_rpath
* Fixed the file_parent_traverse function call in lib/checks/binary_writable
  and lib/checks/system_libraries
* Fixed some more checks' descriptions
* Bug fix: Syntax fix in lib/misc/binary

-- Bernardo Damele A. G. <bernardo.damele@gmail.com>

2012-10-18 unix-privesc-check trunk

* Tidied up upc.sh, added an additional error check
* Purged dummy, replaced with _ after suggestion from BDA
* Bug fix: No longer considers "enabled" as a check
* Changed lib/misc/privileged to split out cache generation so that it
  happens on inclusion
* Bug fix: Removed unintentional trailing space from file cache

-- Tim Brown <timb@nth-dimension.org.uk>

2012-10-18 unix-privesc-check trunk

* Bug fix: Fixed regexp patterns to avoid returning directories in
  lib/misc/privileged and lib/misc/file

-- <pentestmonkey@pentestmonkey.net>

2012-10-18 unix-privesc-check trunk

* Added check lib/checks/binary_writable
* Bug fix: Proper use of dirname in file_show_symlinked_filename function
* Bug fix: Replaced stdin redirection with cat for inetd configuration
  files parsing in lib/misc/linker
* Bug fix: Avoid escaping a path with an asterisk in lib/misc/ssh_agent
* Refactored check lib/checks/system_libraries code